fix: fixed the issue of mobile responsiveness -logo responsiveness -center alignment

--- a/bg.css
+++ b/bg.css
@@ -4,16 +4,10 @@
   box-sizing: border-box;
 }
 
-:root {
-  font-size: 18px;
-}
-
-html,
-body,
 main {
   height: 100%;
   width: 100%;
-  position: relative;
+  position: absolute;
 }
 
 body {
